fix(test): correct syntax errors and improve test code quality
- Fix PrintStream constructor syntax in multiple test files
- Replace deprecated toList() with collect(Collectors.toList()) in BubbleSort
- Use getCapacity() method instead of direct field access in queue tests
- Add missing QueueResult helper class and copyQueue method
- Fix array element access by assigning to variable in sample_Test